Clean up tweak registration logic